2004-02-09  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: (SetNewerThan) try get_date first.
	* SleepJob.cc: print get_date error.
	* commands.cc: fix mirror help; get1 --target-position instead of
	  --target-region.
	* getdate.y, getdate.h: save error string instead of printing.
	* ftpclass.h, ftpclass.cc: drop log_resp and result; use data_iobuf
	  for QUOTE_CMD and all_lines for OPIE/SKEY.
	* Makefile.am: move getdate.y and getdate.h to libtasks (it is used in
	  two separate modules).

2004-02-04  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: (SkipHome) fix it to skip / too; handle ~.
	* SMTask.h, SMTask.cc: (Enter, Leave) new methods; now a task can
	  be run nested many times (int running); Schedule optimizations.
	* CmdExec.cc: use Enter/Leave.
	* log.cc, log.h: add support for pid, time and context log prefixes.
	* lftp.cc: enable pid, time and context on exit to bg.
	* ftpclass.cc: move DataClose from Read to Do; use Enter/Leave to
	  show proper context.
	* FileAccess.cc: modify DebugPrint to use prefixes of Log class;
	  use Enter/Leave in CleanupAll.
	* FileAccess.h: (GetLogContext) new method, use hostname as context.
	* commands.cc: add -t -c -p options for debug command; add range
	  options for get1.
	* Resolver.h: add GetLogContext method.

2004-01-28  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc, NetAccess.h: (proxy_proto) new member.
	* ftpclass.cc, ftpclass.h: close data socket on temp transfer errors;
	  enum pasv_state instead of addr_received; http proxy support with
	  CONNECT method.
	* resource.cc: new setting ftp:use-hftp to select between GET and
	  CONNECT methods when ftp:proxy points to http:// url.

2004-01-24  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, commands.cc: --delete-first, not --remove-first;
	  update help text for mirror.
	* buffer.cc: accept '' charset as 'char' (they are equivalent in
	  libiconv and '' seems to be supported by glibc).
