@@ -9,7 +9,8 @@ noinst_SCRIPTS = ftpget convert-netscape-cookies
 EXTRA_DIST = $(pkgdata_SCRIPTS) $(bin_SCRIPTS) $(noinst_SCRIPTS) \
 	example1.cc example2.cc
 
-lftp_SOURCES = lftp.cc complete.h complete.cc lftp_rl.c lftp_rl.h
+lftp_SOURCES = lftp.cc complete.h complete.cc lftp_rl.c lftp_rl.h getdate.y getdate.h
+
 #ftpget_SOURCES = ftpget.cc
 
 noinst_LIBRARIES = libtasks.a libjobs.a
@@ -63,8 +64,7 @@ libtasks_a_SOURCES = PollVec.cc PollVec.h SMTask.cc SMTask.h ProcWait.cc\
  FileSetOutput.h lftp_tinfo.cc lftp_tinfo.h\
  TimeDate.cc TimeDate.h Timer.cc Timer.h GetFileInfo.cc GetFileInfo.h\
  StringPool.cc StringPool.h DirColors.cc DirColors.h IdNameCache.cc\
- IdNameCache.h PatternSet.cc PatternSet.h LocalDir.cc LocalDir.h\
- getdate.y getdate.h
+ IdNameCache.h PatternSet.cc PatternSet.h LocalDir.cc LocalDir.h
 
 libjobs_a_SOURCES = Job.cc Job.h CmdExec.cc CmdExec.h\
  commands.cc mgetJob.h mgetJob.cc SysCmdJob.cc SysCmdJob.h rmJob.cc rmJob.h\
