@@ -1,3 +1,8 @@
+2004-02-12  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* StatusLine.cc, StatusLine.h: support multiline status.
+	* ftpclass.cc: fix hang on data eof (introduced in last change set).
+
 2004-02-09  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* MirrorJob.cc: (SetNewerThan) try get_date first.
